--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Halo 版本的樱花🌸主题",
   "scripts": {
     "dev": "vite build --watch --mode development",
-    "build": "tsc && vite build",
+    "build": "npx tsc && vite build",
     "lint": "eslint ./src --ext .js,.cjs,.mjs,.ts,.cts,.mts --ignore-path .gitignore",
     "prettier": "prettier --write './src/**/*.{js,ts,css,json,ml,yaml,html}' './templates/**/*.html'",
     "prepare": "husky install"
@@ -55,7 +55,7 @@
     "postcss-mixins": "^9.0.4",
     "postcss-nesting": "^10.2.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3",
+    "typescript": "^5.8.3",
     "vite": "^4.3.9",
     "vite-plugin-purge-icons": "^0.9.2"
   },
